Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjTextObjField.quorum
class main
    Text t
    Boolean bool
    action Main
        t:setValue("text")
        bool = cast(Boolean, t)
    end
end